# nrf-lora-endnode

./: CMakeLists.txt  local.jlink  prj.conf
boards/shields/semtech_sx1261mb2bas/: Kconfig.defconfig  Kconfig.shield  semtech_sx1261mb2bas.overlay
boards/shields/semtech_sx1261mb2bas/doc/: index.rst
boards/shields/semtech_sx1276mb1mas/: Kconfig.defconfig  Kconfig.shield  semtech_sx1276mb1mas.overlay
boards/shields/semtech_sx1276mb1mas/doc/: index.rst
src/: main.c
src/modules/: module_lorawan.c
